crates/cribo/tests/snapshots/execution_results@xfail_bundle_third_party_metadata_use_before_reimport.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_metadata_use_before_reimport/main.py
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "provider metadata missing",
}
